fix: Tweak border & background colors for contrast
Fixes #413.

--- a/src/popup/snooze.scss
+++ b/src/popup/snooze.scss
@@ -121,7 +121,7 @@ body {
 }
 
 .header {
-  border-bottom: 1px solid $grey-20;
+  border-bottom: 1px solid $grey-30;
   font-size: 15px;
   height: 50px;
   justify-content: center;
@@ -199,7 +199,7 @@ ul.times {
 
     .title {
       align-items: center;
-      border-top: 1px solid $grey-20;
+      border-top: 1px solid $grey-30;
       display: flex;
       flex: 1 0 0;
       font-size: 13px;
@@ -209,7 +209,7 @@ ul.times {
 
     .date {
       align-items: center;
-      border-top: 1px solid $grey-20;
+      border-top: 1px solid $grey-30;
       color: $grey-50;
       display: flex;
       flex-grow: 0;
@@ -296,7 +296,7 @@ li.entry {
 
   .date {
     align-items: flex-end;
-    border-bottom: 1px solid $grey-20;
+    border-bottom: 1px solid $grey-30;
     color: $grey-50;
     display: flex;
     flex-direction: column;
@@ -324,7 +324,7 @@ li.entry {
   }
 
   .content {
-    border-bottom: 1px solid $grey-20;
+    border-bottom: 1px solid $grey-30;
     display: flex;
     flex-direction: column;
     flex-grow: 3;
@@ -410,8 +410,8 @@ li.entry {
 
 .footer {
   align-items: stretch;
-  background: $grey-20;
-  border-top: 1px solid $grey-20;
+  background: $grey-10;
+  border-top: 1px solid $grey-30;
   flex-direction: row;
   font-size: 11px;
   height: 42px;
@@ -492,7 +492,7 @@ li.entry {
 }
 
 .rc-calendar-date-panel {
-  border: 1px solid $grey-20;
+  border: 1px solid $grey-30;
   border-radius: 2px;
 }
 
